[gd_scene load_steps=6 format=2]

[ext_resource path="res://Other/PanelWithCorners.tres" type="StyleBox" id=1]
[ext_resource path="res://Elements/Mood.gd" type="Script" id=2]
[ext_resource path="res://Warning.png" type="Texture" id=3]

[sub_resource type="GDScript" id=2]
script/source = "tool
extends TextureRect

func _physics_process(delta):
	rect_min_size.x = rect_size.y
"

[sub_resource type="GDScript" id=1]
script/source = "tool
extends TextureRect

func _physics_process(delta):
	rect_min_size.y = rect_size.x
"

[node name="Mood" type="MarginContainer"]
margin_right = 200.0
margin_bottom = 264.0
rect_min_size = Vector2( 200, 200 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 311.0
custom_styles/panel = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 311.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Lines" type="VBoxContainer" parent="Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 185.0
margin_bottom = 301.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="Margin/Lines"]
margin_right = 180.0
margin_bottom = 20.0
text = "Emotion name:"
align = 1

[node name="NameSuff" type="HBoxContainer" parent="Margin/Lines"]
margin_top = 25.0
margin_right = 180.0
margin_bottom = 55.0

[node name="Name" type="LineEdit" parent="Margin/Lines/NameSuff"]
margin_right = 146.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "New emotion"
align = 1

[node name="Suffix" type="TextureRect" parent="Margin/Lines/NameSuff"]
margin_left = 150.0
margin_right = 180.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
mouse_filter = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
script = SubResource( 2 )

[node name="Label2" type="Label" parent="Margin/Lines"]
margin_top = 60.0
margin_right = 180.0
margin_bottom = 80.0
text = "Texture:"
align = 1

[node name="TextureRect" type="TextureRect" parent="Margin/Lines"]
margin_top = 85.0
margin_right = 180.0
margin_bottom = 265.0
rect_min_size = Vector2( 0, 180 )
expand = true
stretch_mode = 6
script = SubResource( 1 )

[node name="GetNewTexBt" type="Button" parent="Margin/Lines/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="DeleteBt" type="Button" parent="Margin/Lines"]
margin_top = 270.0
margin_right = 180.0
margin_bottom = 296.0
text = "Удалить"

[connection signal="text_changed" from="Margin/Lines/NameSuff/Name" to="." method="_on_Name_text_changed"]
[connection signal="pressed" from="Margin/Lines/TextureRect/GetNewTexBt" to="." method="_on_GetNewTexBt_pressed"]
[connection signal="pressed" from="Margin/Lines/DeleteBt" to="." method="_on_DeleteBt_pressed"]
